@@ -1,5 +1,8 @@
 Darwin Build Scripts Change History
 -----------------------------------
+Release 34 [12-Mar-2013]
+	- darwintrace: use _simple_dprintf instead of snprintf.
+
 Release 33 [29-Aug-2012]
 	- darwinup: Fix uninitialised variable in Database.cpp.
 
